@@ -95,6 +95,9 @@ enum SOURCE_FILTER {
 #if INTERNAL_SOURCEFILTER_FLV
     SRC_FLV,
 #endif
+#if INTERNAL_SOURCEFILTER_GIF
+    SRC_GIF,
+#endif
 #if INTERNAL_SOURCEFILTER_ASF
     SRC_ASF,
 #endif
