@@ -42,6 +42,7 @@
 #define INTERNAL_SOURCEFILTER_FLIC      INTERNAL_FILTERS_ENABLED
 #define INTERNAL_SOURCEFILTER_FLAC      INTERNAL_FILTERS_ENABLED
 #define INTERNAL_SOURCEFILTER_FLV       INTERNAL_FILTERS_ENABLED
+#define INTERNAL_SOURCEFILTER_GIF       INTERNAL_FILTERS_ENABLED
 #define INTERNAL_SOURCEFILTER_ASF       INTERNAL_FILTERS_ENABLED
 #define INTERNAL_SOURCEFILTER_MATROSKA  INTERNAL_FILTERS_ENABLED
 #define INTERNAL_SOURCEFILTER_MP4       INTERNAL_FILTERS_ENABLED
@@ -108,7 +109,7 @@
     INTERNAL_SOURCEFILTER_MATROSKA || INTERNAL_SOURCEFILTER_MP4 || INTERNAL_SOURCEFILTER_OGG || INTERNAL_SOURCEFILTER_MPEGAUDIO || INTERNAL_SOURCEFILTER_MPEG || \
     INTERNAL_SOURCEFILTER_REALMEDIA || INTERNAL_SOURCEFILTER_HTTP || INTERNAL_SOURCEFILTER_UDP ||INTERNAL_SOURCEFILTER_RTP || INTERNAL_SOURCEFILTER_RTSP ||      \
     INTERNAL_SOURCEFILTER_AVI2AC3 || INTERNAL_SOURCEFILTER_RFS || INTERNAL_SOURCEFILTER_RTSP || INTERNAL_SOURCEFILTER_MMS || INTERNAL_SOURCEFILTER_RTMP ||       \
-    INTERNAL_SOURCEFILTER_AVS)
+    INTERNAL_SOURCEFILTER_AVS || INTERNAL_SOURCEFILTER_GIF)
 
 #define HAS_AUDIO_DECODERS \
     (INTERNAL_DECODER_LPCM || INTERNAL_DECODER_PS2AUDIO || INTERNAL_DECODER_REALAUDIO || INTERNAL_DECODER_PCM || INTERNAL_DECODER_AC3 || \
